--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div id="banner">
-      <h1>Playground app</h1>
+      <h1>My Playground App</h1>
       <p>This is the important line everyone reads..</p>
       <p>
         <a href="#" class="btn btn-warning">Start now</a>
