--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="card text-center" id="fast">
-              <img src="Images/briefcase.png" alt="picture description" width="100">
+              <img src="images/briefcase.png" alt="picture description" width="100">
               <h2>Fast</h2>
               <p>A fast app, <strong>very fast</strong> app</p>
             </div>
