--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <div>
       <meta charset="utf-8">
-      <title>My playground landing</title>
+      <title>my playground landing</title>
 
       <link rel="stylesheet" type="text/css" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Acme|Ropa+Sans" rel="stylesheet">
